# openai-agents-aerospike

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  session_latency.py
benchmarks/infra/: README.md  tuning-profile.md
benchmarks/infra/orchestrator/: README.md  run_sweep.sh  summarize_sweep.py
benchmarks/infra/terraform/aerolab-compare/: main.tf  outputs.tf  variables.tf
benchmarks/infra/terraform/modules/aerospike-cluster/: main.tf  outputs.tf  startup.sh  variables.tf
benchmarks/infra/terraform/modules/client/: main.tf  outputs.tf  startup.sh  variables.tf
benchmarks/infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
benchmarks/infra/terraform/modules/postgres/: main.tf  outputs.tf  startup.sh  variables.tf
benchmarks/infra/terraform/modules/redis/: main.tf  outputs.tf  startup.sh  variables.tf
benchmarks/infra/terraform/single-node/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
benchmarks/infra/terraform/three-node/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
benchmarks/results/: 20260421T231245Z-aerospike.md  20260421T231249Z-aerospike-sharded.md  20260421T231909Z-aerospike-sharded.md  20260421T231927Z-aerospike.md  20260422T163933Z-aerospike-sharded.md  20260422T164023Z-aerospike.md
docs/: benchmark-results.md  data-model.md  migration-from-redis.md  quickstart.md
examples/: 01_quickstart_session.py  02_multi_worker_chat.py  03_persistent_research_agent.py  04_handoff_with_state_tool.py
src/openai_agents_aerospike/: __init__.py  session.py  sharded_session.py
src/openai_agents_aerospike/tools/: __init__.py  _shared.py  handoff_state.py  idempotency.py  rate_limit.py  user_profile.py
tests/: conftest.py  test_import.py  test_session.py  test_sharded_session.py
