[project]
name = "openai-agents-aerospike"
version = "0.1.0"
description = "Aerospike-backed Session and reference tools for the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aerospike Community" }]
keywords = [
    "openai",
    "openai-agents",
    "agents",
    "aerospike",
    "session",
    "memory",
    "llm",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai-agents>=0.14.0,<1",
    "aerospike>=19.1.0,<20",
]

[project.urls]
Homepage = "https://github.com/aerospike-community/openai-agents-aerospike"
Repository = "https://github.com/aerospike-community/openai-agents-aerospike"
Issues = "https://github.com/aerospike-community/openai-agents-aerospike/issues"

[dependency-groups]
dev = [
    "mypy",
    "ruff==0.9.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_agents_aerospike"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["openai_agents_aerospike"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]
"benchmarks/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["aerospike", "aerospike.*", "aerospike_helpers", "aerospike_helpers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: requires a live Aerospike server (skipped if AEROSPIKE_HOST is unset)",
    "serial: tests that must run serially (incompatible with pytest-xdist parallel mode)",
]

[tool.coverage.run]
source = ["src/openai_agents_aerospike"]
omit = ["tests/*", "examples/*", "benchmarks/*"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
    "raise NotImplementedError",
]
